
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ __u8 ;
typedef int __u32 ;
typedef scalar_t__ __u16 ;



__u16 cksum(__u16 *buf, int nbytes) {
 __u32 sum;
 __u16 oddbyte;

 sum = 0;
 while(nbytes > 1) {
  sum += *buf++;
  nbytes -= 2;
 }

 if(nbytes == 1) {
  oddbyte = 0;
  *((__u16 *) &oddbyte) = *(__u8 *) buf;
  sum += oddbyte;
 }

 sum = (sum >> 16) + (sum & 0xffff);
 sum += (sum >> 16);

 return (__u16) ~sum;
}
